Fix small issue on iOS

--- a/src/app/internet-plans/internet-plans.component.scss
+++ b/src/app/internet-plans/internet-plans.component.scss
@@ -23,6 +23,7 @@
   justify-content: center;
   padding: 0.3em 2em 0.3em 0.5em;
   font-size: 85%;
+  color: currentColor;
   appearance: none;
   background-color: rgb(255 255 255);
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='%23101010' stroke-width='2'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' d='M19 9l-7 7-7-7' /%3E%3C/svg%3E");
